feature/#115 - Created and implemented endpoint user/courses/unsubscribed and renamed endpoint user/learn/courses to user/courses
