# modules/infrastructure/backend-api-spring/src/main/java/com/knowy/server/api/usecase/user/FindNotSubscribedCoursesCommand.java
@@ -1,0 +1,8 @@
+package com.knowy.server.api.usecase.user;
+
+import com.knowy.server.api.dto.PaginationData;
+
+import java.util.List;
+
+public record FindNotSubscribedCoursesCommand(PaginationData paging, List<String> categories) {
+}
